--- a/src/webhive.frontend/app/index.html
+++ b/src/webhive.frontend/app/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Webhive</title>
+    <script type="text/javascript" src="app.js" defer></script>
 </head>
 <body>
 </body>
