--- a/src/webhive.frontend/app/index.html
+++ b/src/webhive.frontend/app/index.html
@@ -9,11 +9,8 @@
     <header-component></header-component>
     <nav-component></nav-component>
     <a-router>
-        <an-outlet><entry-list></entry-list></an-outlet>
-        <a-route path="/" element="entry-list-component" import="entry-list.js"></a-route>
-        <a-route path="" element="entry-list-component" import="entry-list.js"></a-route>
-        <a-route path="http://localhost:8080/" element="entry-list-component" import="entry-list.js"></a-route>
-        <a-route path="http://localhost:8080/" element="entry-list-component" import="entry-list.js"></a-route>
+        <an-outlet></an-outlet>
+        <a-route path="/" element="entry-list-component" lazyload="true" import="./entry-list.js"></a-route>
         <a-route path="*"><template>Page not found</template></a-route>
     </a-router>
 </body>
