cherry tree experiments

--- a/src/webhive.frontend/app/index.html
+++ b/src/webhive.frontend/app/index.html
@@ -9,7 +9,7 @@
     <header-component></header-component>
     <nav-component></nav-component>
     <main data-role="primary-outlet">
-        <entry-list-component></entry-list-component>
+        <!-- <entry-list-component></entry-list-component> -->
     </main>
 </body>
 
