--- a/src/webhive.frontend/app.component/src/index.html
+++ b/src/webhive.frontend/app.component/src/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
     <title>Web Hive</title>
 </head>
