Real dom diff works but header is dissapering

--- a/src/webhive.frontend/app.component/src/index.xhtml
+++ b/src/webhive.frontend/app.component/src/index.xhtml
@@ -8,6 +8,5 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="//unpkg.com/dimport/nomodule" data-main="app.js"></script>
 </head>
-<body>
-</body>
+<body></body>
 </html>
